--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,55 @@
     margin: 0;
 }
 
+.contenedor-principal {
+    padding: 0px 25px;
+    margin-top: 8px;
+}
+
+.encabezado {
+    width: 100%;
+    height: 45px;
+    position: relative;
+    display: flex;
+    background-color: rgb(236, 167, 44);
+    justify-content: space-between;
+    border-radius: 10px;
+    align-items: center;
+}
+
+.logo {
+    margin-left: 10px;
+    width: 110px;
+    height: 25px;
+}
+
+.link-encabezado {
+    position: absolute;
+    right: 75px;
+    text-decoration: none;
+    font-size: 20px;
+    color: black;
+    cursor: pointer;
+    margin-right: 5px;
+}
+
+.link-encabezado:hover {
+    padding: 5px;
+}
+
+.img-modoOscuro {
+    width: 43px;
+    height: 43px;
+    cursor: pointer;
+}
+
+.img-modoOscuro:hover {
+    padding: 3px;
+}
+
+.btn-activar-modo-oscuro {
+    background: none;
+    border: none;
+    align-items: center;
+    margin-right: 15px;
+}
