--- a/css/style.css
+++ b/css/style.css
@@ -100,12 +100,32 @@ main {
 }
 
 .contenedor-info-tiempo-preparacion {
+    background-color: #ab9d9139;
     padding-left: 50px;
+    border-radius: 5px;
+}
+
+.contenido-nutricional {
+    margin-top: 5px;
+    padding: 15px 15px;
+}
+
+.sub-titulo-contenido-nutricional {
+    font-size: 20px;
+    color: #7E4333;
+    font-family: "DM Serif Display";
+}
+
+.contenido-info-tiempo-preparacion {
+    padding: 25px;
 }
 
 .contenedor-info-preparacion ol li {
-    font-weight: bold;
     margin-bottom: 5px;
+}
+
+.principal {
+    font-weight: bold;
 }
 
 .contenedor-info-preparacion ol ul li {
@@ -139,14 +159,7 @@ margin: 40px 20px;
     padding: 0 25px;
 }
 
-.sub-titulo-tiempo-preparacion {
-    font-size: 20px;
-    color: #7E4333;
-    font-family: "DM Serif Display";
-    margin-bottom: 8px;
-}
-
-.sub-titulo-preparacion {
+.sub-titulo-tiempo-preparacion, .sub-titulo-preparacion, .sub-titulo-ingredientes {
     font-size: 20px;
     color: #7E4333;
     font-family: "DM Serif Display";
@@ -168,16 +181,26 @@ margin: 40px 20px;
     font-size: 18px;
 }
 
+.lista-ingredientes ul li {
+    margin-bottom: 5px;
+}
+
+.lista-ingredientes li {
+    margin-bottom: 7px;
+}
+
+.contenedor-ingredientes {
+    padding: 0 8px;
+}
 
 
-
-.contenedor-aside {
-    
+.contenedor-nutricional {
+    padding: 15px 8px;
 }
 
 .contenedor-nutricional {
     width: 500px;
-    height: 450px;
+    height: auto;
     background-color: rgb(249, 245, 255);
     border-radius: 10px;
     margin-bottom: 25px;
@@ -185,9 +208,72 @@ margin: 40px 20px;
 
 .contenedor-otros {
     width: 500px;
-    height: 320px;
+    height: auto;
+    padding: 15px 15px;
     background-color: rgb(249, 245, 255);
     border-radius: 10px;
+}
+
+.receta {
+    display: flex;
+    padding: 5px 8px;
+    margin-bottom: 20px;
+}
+
+.titulo-mas-recetas {
+    font-size: 20px;
+    color: #7E4333;
+    font-family: "DM Serif Display";
+    margin-bottom: 14px;
+}
+
+.contenedor-imagen-receta {
+    width: 75px;
+    height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 25px;
+}
+
+.imagen-receta {
+    width: 64px !important; 
+    height: 64px !important;
+    border-radius: 8px;
+}
+
+.contenido-receta {
+    display: flex;
+    flex-direction: column;
+}
+
+.titulo-recetas {
+    font-size: 20px;
+    color: #7E4333;
+    font-family: "DM Serif Display";
+    margin-bottom: 5px;
+}
+
+.texto-receta {
+    font-size: 18px;
+}
+
+table {
+    width: 100%;
+    padding: 0 5px;
+    table-layout: fixed; /* Acomoda las columnas para que queden iguales en tamaño */
+    border-collapse: collapse; /* Para que no se creen dobles espacios entre celdas */
+}
+
+td, th {
+    border-bottom: 1px solid black;
+    max-width: 100%;
+    padding: 8px 3px 1px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+table tr td:nth-of-type(2) {
+    text-align: right;
 }
 
 footer {
