--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     padding: 0px 25px;
     margin-top: 8px;
     display: grid;
-    grid-template-rows: 60px 1fr 55px;
+    grid-template-rows: 45px 1fr 55px;
     grid-template-areas: 
                         "header"
                         "main"
@@ -26,7 +26,7 @@ body {
 
 .encabezado {
     width: 100%;
-    height: 45px;
+    height: 40px;
     position: relative;
     display: flex;
     background-color: #255538;
@@ -38,16 +38,17 @@ body {
 
 .logo {
     margin-left: 10px;
-    width: 110px;
+    width: 75px;
     height: 25px;
+    padding: 5px 5px;
 }
 
 .link-encabezado {
     position: absolute;
     right: 75px;
     text-decoration: none;
-    font-size: 20px;
-    color: black;
+    font-size: 14px;
+    color: white;
     cursor: pointer;
     margin-right: 5px;
 }
@@ -77,15 +78,18 @@ main {
     grid-area: main;
     border-radius: 10px;
     display: flex;
+    grid-template-columns: 60% 40%;
+    grid-template-areas: "contenidoPrincipal contenidoSecundario";
     flex-direction: row;
     gap: 50px;
     justify-content: center;
-    padding: 35px 0;
+    padding: 25px 80px;
 }
 
 .contenedor-info-principal {
-    width: 1000px;
+    max-width: 1200px;
     height: auto;
+    grid-area: contenidoPrincipal;
     position: relative;
     background-color: white;
     border-radius: 10px;
@@ -93,6 +97,10 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 30px;
+}
+
+.contenedor-aside {
+    grid-area: contenidoSecundario;
 }
 
 .contenedor-info-encabezado {
@@ -111,7 +119,7 @@ main {
 }
 
 .sub-titulo-contenido-nutricional {
-    font-size: 20px;
+    font-size: 18px;
     color: #7E4333;
     font-family: "DM Serif Display";
 }
@@ -140,19 +148,18 @@ margin: 40px 20px;
     border-radius: 25px;
     width: auto;
     height: 390px;
-    margin-top: 20px;
     box-shadow: 4px 6px rgba(0, 0, 0, 0.078);
 }
 
 .titulo-contenido-principal {
     margin-top: 18px;
-    font-size: 35px;
+    font-size: 30px;
     color: #7E4333;
     font-family: "DM Serif Display";
 }
 
 .parrafo-contenido-principal {
-    font-size: 18px;
+    font-size: 15px;
     font-family: "Embed code";
     text-align: center;
     margin-top: 15px;
@@ -160,7 +167,7 @@ margin: 40px 20px;
 }
 
 .sub-titulo-tiempo-preparacion, .sub-titulo-preparacion, .sub-titulo-ingredientes {
-    font-size: 20px;
+    font-size: 18px;
     color: #7E4333;
     font-family: "DM Serif Display";
     margin-bottom: 8px;
@@ -173,12 +180,12 @@ margin: 40px 20px;
 
 .contenedor-info-principal ul {
     font-family: "Embed code";
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .contenedor-info-principal ol {
     font-family: "DM Serif Display";
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .lista-ingredientes ul li {
@@ -195,7 +202,7 @@ margin: 40px 20px;
 
 
 .contenedor-nutricional {
-    padding: 15px 8px;
+    padding: 18px 8px;
 }
 
 .contenedor-nutricional {
@@ -253,14 +260,14 @@ margin: 40px 20px;
 }
 
 .titulo-recetas {
-    font-size: 20px;
+    font-size: 16px;
     color: #7E4333;
     font-family: "DM Serif Display";
     margin-bottom: 5px;
 }
 
 .texto-receta {
-    font-size: 18px;
+    font-size: 15px;
 }
 
 table {
@@ -283,7 +290,7 @@ table tr td:nth-of-type(2) {
 
 .contenido-footer {
     width: 100%;
-    height: 55px;
+    height: 60px;
     grid-area: footer;
     display: flex;
     flex-direction: row;
@@ -293,4 +300,9 @@ table tr td:nth-of-type(2) {
     padding: 0 10px;
     border-radius: 10px;
     margin-bottom: 0px;
+}
+
+.img-copyright {
+    width: 230px;
+    height: 30px;
 }
